src/components/ListingPage/ListingMembersTab/ListingMembersTab.module.css
.container {
  max-width: 100vw;
  overflow-x: auto;
  min-height: 100vh;
}

.orders-table {
  max-width: 1100px;
  border-radius: 8px;
  /* border: 1px solid var(--Grey-Light, #CED4DA); */
  border-collapse: collapse;
  width: 100%;
  overflow: hidden;
  min-width: 700px;
  overflow-y: visible;
}

.orders-table tr,
.orders-table thead {
  width: 100%;
}

.orders-table thead th div {
  display: flex;
  padding: 12px 8px 12px 16px;
  align-items: center;
  gap: 10px;
  align-self: stretch;

  border: 1px solid var(--Grey-Light, #ced4da);
  background: var(--background-white, #fff);
  height: 40px;
}

.orders-table thead th:nth-child(5) div {
  display: flex;
  padding: 12px 16px;
  align-items: center;
  gap: 10px;
  align-self: stretch;
  background: var(--background-white, #fff);
}

.orders-table thead th div p {
  color: var(--Primary-Full, #8064a2);
  font-feature-settings: 'clig' off, 'liga' off;
  font-family: 'Poppins';
  font-size: 12px;
  font-style: normal;
  font-weight: 500;
  line-height: 18px;
  /* 150% */
}

.orders-table thead th:nth-child(1) {
  width: 15.05%;
}

.orders-table thead th:nth-child(1) div {
  border-top-left-radius: 8px;
}

.orders-table thead th:nth-child(2) {
  width: 26.66%;
}

.orders-table thead th:nth-child(3) {
  width: 19.89%;
}

.orders-table thead th:nth-child(4) {
  width: 10%;
}

.orders-table thead th:nth-child(5) {
  width: 20.5%;
}
.minimum-padding {
  margin: -9px 0;
}
.orders-table thead th:nth-child(6) div {
  border-top-right-radius: 8px;
}

.orders-table tbody tr {
  border-left: 1px solid var(--Grey-Lighter, #ced4da);
  border-right: 1px solid var(--Grey-Lighter, #ced4da);
  border-bottom: 1px solid var(--Grey-Lighter, #ebedf0);
}

.orders-table tbody tr td p {
  color: var(--Grey-Darkest, #08090a);
  font-feature-settings: 'clig' off, 'liga' off;
  font-family: 'Poppins';
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 20px;
  /* 142.857% */
}

.orders-table tbody tr td:nth-child(1) div {
  display: flex;
  height: 100%;
  padding: 26px 0 26px 16px;
  align-items: center;
  gap: 10px;
  align-self: stretch;
  width: 100%;
}

.orders-table tbody tr td:nth-child(2) div {
  display: flex;
  height: 100%;
  width: 100%;
  padding: 26px 8px 26px 16px;
  align-items: center;
  gap: 10px;
  align-self: stretch;
}

.orders-table tbody tr td:nth-child(2) div img {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

.orders-table tbody tr td:nth-child(2) div p {
  font-weight: 500;
}

.orders-table tbody tr td:nth-child(3) > div,
.orders-table tbody tr td:nth-child(4) > div {
  display: flex;
  padding: 26px 8px 26px 16px;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: 12px;
  align-self: stretch;
  height: 100%;
  width: 100%;
}

.orders-table tbody tr td:nth-child(4) p {
  text-align: center;
  width: 100%;
}

.orders-table tbody tr td:nth-child(5) div {
  display: flex;
  height: 100%;
  width: 100%;
  padding: 26px 16px;
  align-items: flex-start;
  gap: 10px;
  align-self: stretch;
}

.orders-table tbody tr td:nth-child(5) div p {
  font-family: 'Poppins';
  font-size: 12px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
}

.orders-table tbody {
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  overflow: hidden;
}

.orders-table tbody tr:last-of-type {
  border-bottom: 1px solid #ced4da;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}

.orders-table tbody tr:last-of-type td:nth-child(1) {
  border-bottom-left-radius: 8px;
}

.even-row {
  background-color: #f8f9fa;
}
.odd-row {
  background-color: #ffffff;
}
.first-row {
  background-color: #f7f5f9;
}
.first-row-text {
  font-size: 12px !important;
  font-weight: 500 !important;
  line-height: 18px !important;
  text-align: left !important;
  color: #8064a2 !important;
}

@media screen and (max-width: 1100px) {
  /* .orders-table {
    display: none;
  } */
}

